After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 708586 - Crashes when unsetting the location entry
Crashes when unsetting the location entry
Status: RESOLVED FIXED
Product: libgweather
Classification: Core
Component: locations
unspecified
Other Linux
: Normal critical
: future
Assigned To: libgweather-maint
libgweather-maint
3.10.1
Depends on:
Blocks:
 
 
Reported: 2013-09-22 18:49 UTC by Sjoerd Simons
Modified: 2013-09-26 11:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Proposed patch (1005 bytes, patch)
2013-09-22 18:49 UTC, Sjoerd Simons
committed Details | Review

Description Sjoerd Simons 2013-09-22 18:49:09 UTC
Created attachment 255533 [details] [review]
Proposed patch

Setting the location of the entry to NULL is documented to unset the
location, unfortunately in practise it causes a crash in
 _location_equal. Fixed in attached patch
Comment 1 Bastien Nocera 2013-09-23 20:45:30 UTC
Review of attachment 255533 [details] [review]:

"practice".

I would also write the commit message in the past tense and avoid the "Fix this" at the end.
Comment 2 Giovanni Campagna 2013-09-26 11:48:40 UTC
Thank you for your patch, applied with minor fixes!