Don't crash when unsetting the location

Setting the location of the entry to NULL is documented to unset the
location, but unfortunately in practice it caused a crash in
gweather_location_equal()

https://bugzilla.gnome.org/show_bug.cgi?id=708586